welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T =new Array[Color](getMondeHauteur())
		while (!estFaceMur()){
			for (i <- 0 to getMondeHauteur()-1){
				T(i)=getCouleurSol()
				avance()	
			}
		}
		for (i <- 0 to getMondeLargeur()-2){
			recule(5)
			gauche()
			avance()
			droite()
			val decalage = litMessage().toInt
			for (i <- 0 to getMondeHauteur()-1){
				setCouleurBrosse(T(i + decalage) % getMondeHauteur())
				baisseBrosse()
				leveBrosse()
			}
		}
	}	
